k8s/service-external-postgres.yml
# Kubernetes service to represent the external PostgreSQL server
---
apiVersion: v1
kind: Service
metadata:
  name: idr-redmine-postgresql
spec:
  ports:
  - name: postgresql
    protocol: TCP
    port: 5432
    targetPort: 5432
  selector: {}

---
kind: Endpoints
apiVersion: v1
metadata:
  name: idr-redmine-postgresql
subsets:
- addresses:
  - ip: 0.0.0.0
  ports:
  - name: postgresql
    port: 5432

---
# If a hostname is available replace above Service and Endpoints with this:
# kind: Service
# apiVersion: v1
# metadata:
#   name: idr-redmine-postgresql
# spec:
#   type: ExternalName
#   externalName: example.domain.name
# selector: {}
