k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: idr-redmine
  labels:
    name: idr-redmine
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: redmine
  selector:
    app: idr-redmine
